--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,3 +15,5 @@
 @import "./variables/common/extra.scss";
 
 @import "./variables/common/register-page/register.scss";
+
+@import "./variables/common/about-page/about.scss"
