--- a/sass/variables/common/about-page/about.scss
+++ b/sass/variables/common/about-page/about.scss
@@ -26,4 +26,7 @@
   font-family: $roboto;
   align-items: center;
   border-top: 2px solid $second-color;
+  .sec-list {
+    margin-left: 25px;
+  }
 }
