--- a/css/style.css
+++ b/css/style.css
@@ -134,11 +134,10 @@ como Header, esquema de cores, footer */
 
 /* nesse documento contem todo esquema SCSS do main da pagina index */
 .container {
-  background-color: rgba(146, 146, 146, 0.7764705882);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  padding-top: 15px;
+  background-color: rgba(146, 146, 146, 0.7764705882);
 }
 
 .main-section {
@@ -152,6 +151,7 @@ como Header, esquema de cores, footer */
   grid-area: main-news;
   padding: 5px 25px;
   gap: 25px;
+  flex: 1 0 auto;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(80px, auto);
   grid-template-areas: "item1 item1 item2" "item3 item4 item4" "item5 item6 item7" "item8 item8 item9";
@@ -165,8 +165,6 @@ como Header, esquema de cores, footer */
 }
 
 .item1 {
-  width: 725px;
-  height: 250px;
   grid-area: item1;
 }
 
@@ -518,6 +516,53 @@ como Header, esquema de cores, footer */
 }
 .about-info .sec-list {
   margin-left: 25px;
+}
+
+@media (max-width: 770px) {
+  .double-news img {
+    width: 350px;
+    height: 250px;
+  }
+  .main-news {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "item1 item2" "item3 item4" "item5 item6" "item7 item8" "item9 item9";
+  }
+  .main-text1 {
+    opacity: 0.8;
+    width: 275px;
+  }
+  .main-text2 {
+    opacity: 0.8;
+    width: 275px;
+  }
+  .main-text3 {
+    opacity: 0.8;
+    width: 275px;
+  }
+  .main-text4 {
+    opacity: 0.8;
+    width: 275px;
+  }
+  .main-text5 {
+    opacity: 0.8;
+    width: 275px;
+  }
+  .main-text6 {
+    opacity: 0.8;
+    width: 275px;
+  }
+  .main-text7 {
+    opacity: 0.8;
+    width: 275px;
+  }
+  .main-text8 {
+    opacity: 0.8;
+    width: 275px;
+  }
+  .main-text9 {
+    opacity: 0.8;
+    width: 275px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
