--- a/sass/variables/common/main.scss
+++ b/sass/variables/common/main.scss
@@ -13,12 +13,11 @@
   font-weight: $font-weight;
 }
 
-.container {
-  background-color: $background;
+.container{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  padding-top: 15px;
+  background-color: $background;
 }
 
 .main-section {
@@ -32,6 +31,7 @@
   grid-area: main-news;
   padding: 5px 25px;
   gap: 25px;
+  flex: 1 0 auto;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(80px, auto);
   grid-template-areas:
@@ -49,8 +49,6 @@
 }
 
 .item1 {
-  width: 725px;
-  height: 250px;
   grid-area: item1;
 }
 
