--- a/sass/variables/common/media.scss
+++ b/sass/variables/common/media.scss
@@ -1,4 +1,11 @@
 @media (max-width: 770px) {
+  .main-section {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas: 
+    "main-news" 
+    "sidebar";
+  }
+
   .double-news {
     img
     {
@@ -57,8 +64,23 @@
     width: 275px;
   }
   
+  .item9 img{
+    width: 725px;
+    height: 250px;
+  }
+
   .main-text9{
     opacity: 0.8;
     width: 275px;
   }
+
+  aside {
+    display: flex;
+    justify-content: center;
+  }
+
+.advertising {
+  width: 80%;
+  margin: 0px 15px;
+}
 }
